--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,10 +24,17 @@
     font: size 1em;
 
 }
-
 a{
     font-size: 0.7em;
 color:white;
 text-decoration-line: none;
 }
 
+.footer-Container3{
+    font-family: 'Montserrat', sans-serif;
+    background-color: #472F01;
+    text-align: center;
+    color:white;    
+    font: size 1em;
+
+}
